# playlist-platformer

./: .gitignore  README.md  index.html  package-lock.json  package.json  spotify.settings.json  spotify.settings.json.template  vite.config.js
docs/: DEVELOPMENT_CHECKLIST.md  IMPLEMENTATION_GUIDE.md  PROJECT_OUTLINE.md  RESOURCES_AND_LINKS.md  SOULSEEK_INTEGRATION.md  SPOTIFY_SETUP.md  SPOTIFY_WEB_PLAYBACK_SDK.md  TECHNICAL_ARCHITECTURE.md
src/: App.css  App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/spotify/: auth.rs  config.rs  mod.rs
